--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -21,6 +21,11 @@ color: #597579;
 font-weight: bold;
 }
 
+.titulo{
+    color: #597579;
+    font-weight: bold;
+}
+
 #text{
     font-size: 3vw;
     text-align: center;
@@ -32,16 +37,36 @@ font-weight: bold;
     margin-bottom: 2.5%;
 }
 
+#center{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 5%;
+}
+
+#left-side{
+    width: 60%;
+}
+
+#right-side{
+    width: 30%;
+}
+
+/* #side-gif{
+    width: 75%;
+} */
+
+.info{
+    font-size: 1.75vw;
+}
+
 .boton{
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.info{
-    font-size: 1.5vw;
-    margin-bottom: 5%
-}
 
 .to-expo{
     font-size: 2vw;
@@ -57,4 +82,15 @@ font-weight: bold;
     background-color: #DEF5F8;
     color: #597579;
     text-decoration: none;
+}
+
+#pie{
+    font-size: 1vw;
+    text-align: center;
+    padding:1%
+}
+
+footer{
+    /* height: 2%; */
+    background-color: #DEF5F8;
 }
