--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,17 +1,49 @@
 body{
-    max-width: 90%;
+    max-width: 95%;
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    background-color: #f4f7f8;
-    /* color: #f4f7f8; */
+    background-color: #f2f8fa;
+}
+
+#nav-bar{
+    display: flex;
+    align-items: center;
+    height: 8vw;
+    background-image: linear-gradient(#597579, #DEF5F8);
+    margin-bottom: 2.5%
 
 }
 
-img{
-    margin-top: 4%;
-    margin-bottom: 1.5em;
-    width: 100%;
+#nav-img{
+    width: 10%;
+}
+
+.items{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+h1{
+    font-size: 2vw;
+    font-weight: bold;
+    color: whitesmoke;
+}
+
+a:link{
+    text-decoration: none;
+    font-size: 2vw;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a{
+    color: whitesmoke;
+}
+
+a:hover{
+    color:#597579
 }
 
 #title{
@@ -22,18 +54,18 @@ font-weight: bold;
 }
 
 .titulo{
-    color: #597579;
+    color: black;
     font-weight: bold;
 }
 
 #text{
-    font-size: 3vw;
+    font-size: 2vw;
     text-align: center;
     color: #597579;
-    }
+}
 
 .line{
-    border: 4px solid #DEF5F8;
+    border: 4px solid #597579;
     margin-bottom: 2.5%;
 }
 
@@ -53,12 +85,19 @@ font-weight: bold;
     width: 30%;
 }
 
-/* #side-gif{
-    width: 75%;
-} */
+#side-gif{
+    width: 100%;
+}
+
+#about{
+    font-size: 2vw;
+    font-weight: bold;
+    color: #597579
+}
 
 .info{
     font-size: 1.75vw;
+    color: #597579;
 }
 
 .boton{
