--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -6,7 +6,7 @@ body{
     background-color: #f2f8fa;
 }
 
-#nav-bar{
+/* #nav-bar{
     display: flex;
     align-items: center;
     height: 8vw;
@@ -45,13 +45,32 @@ a{
 
 a:hover{
     color:#597579
+} */
+
+#top{
+    margin-top: 2.5%;
+    margin-bottom: 5%;
+
 }
 
+#date{
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    font-size: 1.5vw;
+    text-align: center;
+    color: #597579;
+}
+
+#help-line{
+    font-size: 2vw;
+    color:#597579;
+    text-align: center;
+}
 #title{
-font-size: 5vw;
-text-align: center;
-color: #597579;
-font-weight: bold;
+    font-size: 5vw;
+    text-align: center;
+    color: #597579;
+    font-weight: bold;
 }
 
 .titulo{
@@ -63,26 +82,52 @@ font-weight: bold;
     font-size: 2vw;
     text-align: center;
     color: #597579;
+    width: 100%; 
+    border-bottom: .25vw solid #597579; 
+    line-height: 0.1em;
+    margin: 1% 0 2%;
 }
 
-.line{
+#text span{
+    background:#f2f8fa; 
+    padding:0 1%; 
+}
+
+/* .line{
     border: 4px solid #597579;
     margin-bottom: 2.5%;
-}
+} */
 
 #center{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-evenly;
     margin-bottom: 5%;
 }
 
-#left-side{
-    width: 60%;
+#div-one{
+    padding:2%;
+    background-color: white;
+    border-radius: 5%;
+    width: 30%;
 }
 
-#right-side{
+#unravel{
+    width:100%;
+    margin-bottom: 2.5%;
+}
+
+#div-two{
+    padding: 2%;
+    background-color: white;
+    border-radius: 5%;
+    width: 30%;
+}
+
+#div-three{
+    padding: 2%;
+    background-color: white;
+    border-radius: 5%;
     width: 30%;
 }
 
@@ -127,7 +172,13 @@ font-weight: bold;
 #pie{
     font-size: 1vw;
     text-align: center;
-    padding:1%
+    padding-top:1%
+}
+
+#people{
+    font-size: 1vw;
+    text-align: center;
+    padding-bottom:1%
 }
 
 footer{
