adds latest gif, tweaks style, updates readme and updates index with correct wording

--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -170,9 +170,15 @@ a:hover{
 }
 
 #pie{
+    padding-top:1%;
+    font-size: 1vw;
+    font-weight: bold;
+    text-align: center;
+}
+
+.pie{
     font-size: 1vw;
     text-align: center;
-    padding-top:1%
 }
 
 #people{
